--- a/Curso HTML/Exercicios/Módulo 3/Exercício 023 - Tabela/tabela01.html
+++ b/Curso HTML/Exercicios/Módulo 3/Exercício 023 - Tabela/tabela01.html
@@ -19,6 +19,7 @@
 
                 table{
                     width: 400px;
+                    height: 400px;
                     border-collapse: collapse;
                     
                 }
@@ -26,6 +27,8 @@
                 td{
                     border: 05px solid black;
                     padding: 8px;
+                    text-align: center; /*Alinhamento horizontal*/
+                    vertical-align: middle;
                 }
 
                 tr.linha{
@@ -38,6 +41,10 @@
 
                 td.cor{
                     background-color: lime;
+                }
+
+                .numero{
+                    text-align: right;
                 }
             </style>
 </head>
@@ -52,12 +59,12 @@
             <tr class="linha">
                 <td>A2</td>
                 <td>B2</td>
-                <td>C2</td>
+                <td class="numero">C2</td>
             </tr>
             <tr>
                 <td class="cor">A3</td>
                 <td class="dado">B3</td>
-                <td class="cor">C3</td>
+                <td class="numero" style="background-color: lime">C3</td>
             </tr>
             <tr>
                 <td>A4</td>
