--- a/Curso HTML/Desafios/Módulo 2/Desafios Prontos/aulas.html
+++ b/Curso HTML/Desafios/Módulo 2/Desafios Prontos/aulas.html
@@ -19,21 +19,21 @@ body{
     <ol>  
         <li>Módulo 1</li>
 <ol>
-<li> <a href="/Curso HTML/desafios/Desafio 1/index.html"  rel="next" target="_blank"> Desafio 1             -<a><strong>Mensagemm</strong></li>
-<li> <a href="/Curso HTML/desafios/Desafio 2/index.html"  rel="next" target="_blank"> Desafio 2    -<a><strong>Imagnes</strong></li>
-<li> <a href="/Curso HTML/desafios/Desafio 3/mapamundi.html"  rel="next" target="_blank"> Desafio 3    -<a><strong>Mapa Mundi</strong></li>
-<li> <a href="/Curso HTML/desafios/Desafio 4/emojis.html"  rel="next" target="_blank"> Desafio 4    -<a><strong>Emojis</strong></li>
-<li> <a href="/Curso HTML/desafios/Desafio 5/link.html"  rel="next" target="_blank"> Desafio 5    -<a><strong>Redes Sociais</strong></li>                
-<li> <a href="/Curso HTML/desafios/Desafio 6/index.html"  rel="next" target="_blank"> Desafio 6    -<a><strong>Tags</strong></li>       
-<li> <a href="/Curso HTML/desafios/Desafio 7/index.html"  rel="next" target="_blank"> Desafio 7    -<a><strong>Imagem Flixível</strong></li>       
-<li> <a href="/Curso HTML/desafios/Desafio 8/index.html"  rel="next" target="_blank"> Desafio 8    -<a><strong>Navegação</strong></li>       
-<li> <a href="/Curso HTML/desafios/Desafio 9/index.html"  rel="next" target="_blank"> Desafio 9    -<a><strong>Vídeos</strong></li>    
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 1/index.html"  rel="next" target="_blank"> Desafio 1             -<a><strong>Mensagemm</strong></li>
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 2/index.html"  rel="next" target="_blank"> Desafio 2    -<a><strong>Imagnes</strong></li>
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 3/mapamundi.html"  rel="next" target="_blank"> Desafio 3    -<a><strong>Mapa Mundi</strong></li>
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 4/emojis.html"  rel="next" target="_blank"> Desafio 4    -<a><strong>Emojis</strong></li>
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 5/link.html"  rel="next" target="_blank"> Desafio 5    -<a><strong>Redes Sociais</strong></li>                
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 6/index.html"  rel="next" target="_blank"> Desafio 6    -<a><strong>Tags</strong></li>       
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 7/index.html"  rel="next" target="_blank"> Desafio 7    -<a><strong>Imagem Flixível</strong></li>       
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 8/index.html"  rel="next" target="_blank"> Desafio 8    -<a><strong>Navegação</strong></li>       
+<li> <a href="/Curso HTML/Desafios/Módulo 1/Desafio 9/thml.html"  rel="next" target="_blank"> Desafio 9    -<a><strong>Vídeos</strong></li>    
 </ol>  
 <li>Módulo 2</li>
 <ol start="10">
-<li> <a href="/Curso HTML/desafios/Desafio 10/index.html"  rel="next" target="_blank"> Desafio 10    -<a><strong>Android</strong></li>    
-<li> <a href="/Curso HTML/desafios/Desafio 11/index.html"  rel="next" target="_blank"> Desafio 11    -<a><strong>Astronauta</strong></li>    
-<li> <a href="/Curso HTML/desafios/Desafio 12/index.html"  rel="next" target="_blank"> Desafio 12    -<a><strong>Cordel</strong></li>    
+<li> <a href="/Curso HTML/Desafios/Módulo 2/Desafio 10/android.html"  rel="next" target="_blank"> Desafio 10    -<a><strong>Android</strong></li>    
+<li> <a href="/Curso HTML/Desafios/Módulo 2/Desafio 11/index.html  rel="next" target="_blank"> Desafio 11    -<a><strong>Astronauta</strong></li>    
+<li> <a href="/Curso HTML/Desafios/Módulo 2/Desafio 12/cordel.html"  rel="next" target="_blank"> Desafio 12    -<a><strong>Cordel</strong></li>    
 
 </ol>
             </ol>
