--- a/Curso HTML/Exercicios/Módulo 3/Exercício 023 - Tabela/exercicio.html
+++ b/Curso HTML/Exercicios/Módulo 3/Exercício 023 - Tabela/exercicio.html
@@ -27,35 +27,28 @@
         Filmes Favoritos
     </caption>
     <thead>
-        <th scope="col">Grupos</th>
-        <th scope="col">Áreas</th>
-        <th colspan="3" scope="colgroup">Filmes</th>
+        <th scope="col">Área</th>
+        <th scope="col">Disciplina</th>
+        <th colspan="2" scope="colgroup">Notas</th>
+         <th>Média</th>
     </thead>
     <tbody>
         <tr>
-        <th rowspan="3" scope="rowgroup">Mulheres</th>
-        <td>Ana Maria Santos </td>
-        <td>Alien</td>
-        <td>Rambo</td>
-        <td>Vingadores</td>
+        <th rowspan="4" scope="rowgroup">Exatas</th>
+        <td>Matemática</td>
+        </tr>
+    <tr>
+        <td>Física</td>
     </tr>
     <tr>
-        <td>Beatriz Souza</td>
-        <td>Hulk</td>
-        <td>Inception</td>
-        <td>Batman</td>
+        <td>Química </td>
     </tr>
-    <tr>
-        <td>Cláudia Melo Souza</td>
-        <td>Oblivion</td>
-        <td>Matrix</td>
-        <td>Big Hero</td>
+<tr>
+    <td>Biologia</td>
+</tr>
     </tr>
-    <th rowspan="3" scope="rowgroup">Homens</th>
-    <td>Bruno Mendonça </td>
-    <td>Intocáveis</td>
-    <td>Amnésia</td>
-    <td>Gladiador</td>
+    <th rowspan="2" scope="rowgroup">Notas</th>
+    <td>Nota 1 </td>
 </tr>
 <tr>
     <td>Daniel Lourenço</td>
