--- a/Curso HTML/Exercicios/Módulo 3/Exercício 023 - Tabela/exercicio.html
+++ b/Curso HTML/Exercicios/Módulo 3/Exercício 023 - Tabela/exercicio.html
@@ -28,7 +28,10 @@
         .topo{
             background-color: black;
             color: white;
+            border: 0px;
+            margin-top: 500px;
         }
+
     </style>
 </head>
 <body>
@@ -38,13 +41,16 @@
         Filmes Favoritos
     </caption>
     <thead>
-        <th scope="col" class="topo">Área</th>
-        <th scope="col" class="topo">Disciplina</th>
-        <th rowspan="4" colspan="2" scope="colgroup" class="topo">Notas </th>
+        <th rowspan="10"  scope="col" class="topo">Área</th>
+        <th rowspan="6"  scope="col" class="topo">Disciplina</th>
+        <th colspan="2" rowspan="2"  scope="colgroup" class="topo">Notas <br> Nota 1 Nota 2</th>
+        
         <th class="topo">Média</th>
     </thead>
     <tbody>
-         <tr>
+      <tr>
+        <tr></tr>
+
         <th rowspan="4" scope="rowgroup">Exatas</th>
         <td>Matemática</td>
         <th>0.0</th>
