--- a/Curso HTML/Exercicios/Módulo 3/Exercício 024/ifrma01.html
+++ b/Curso HTML/Exercicios/Módulo 3/Exercício 024/ifrma01.html
@@ -19,7 +19,7 @@
     <h1>Testando Iframes</h1>
     <p>
         Acessando o sito do  
-        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500" scolling="no"></iframe>
+        <iframe src="https://www.cursoemvideo.com" height="500" ></iframe>
         <a href=" https://www.cursoemvideo.com"></a>       
         para aprender a programar
     </p>
