--- a/Curso HTML/Exercicios/Módulo 3/Exercício 024/ifrma02.html
+++ b/Curso HTML/Exercicios/Módulo 3/Exercício 024/ifrma02.html
@@ -14,12 +14,18 @@
             display: block;
             margin: auto;
         }
+        .erro{
+            background-color: black;
+            color: red;
+        }
     </style>
 </head>
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit beatae nobis illo error corrupti porro nemo unde dolorem! Aliquam adipisci minima optio blanditiis vitae exercitationem sit officia voluptatum repellendus praesentium!</p>
-    <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500" width="500"></iframe>
+    <p>
+    <iframe src="https://www.cursoemvideo.com"  height="500" width="500"></iframe></p>
+    <p class="erro">Infelizmente seu navegador não é compativel com isso!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iure minus vel doloribus incidunt omnis voluptas error, architecto voluptatibus impedit, suscipit fugit, facilis repellat autem consectetur animi ipsam! Nobis, atque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero magnam voluptas quaerat aut deleniti rem neque omnis perspiciatis nemo, suscipit quam hic alias facere dolorem, dignissimos pariatur harum, nesciunt blanditiis? lorem </p>
     <h1>Iframe Local</h1>
     <iframe src="pagina1.html" frameborder="0" height="500" width="500"></iframe>
