--- a/Curso HTML/Exercicios/Módulo 3/Exercício 024/ifrma02.html
+++ b/Curso HTML/Exercicios/Módulo 3/Exercício 024/ifrma02.html
@@ -28,6 +28,6 @@
     <p class="erro">Infelizmente seu navegador não é compativel com isso!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iure minus vel doloribus incidunt omnis voluptas error, architecto voluptatibus impedit, suscipit fugit, facilis repellat autem consectetur animi ipsam! Nobis, atque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero magnam voluptas quaerat aut deleniti rem neque omnis perspiciatis nemo, suscipit quam hic alias facere dolorem, dignissimos pariatur harum, nesciunt blanditiis? lorem </p>
     <h1>Iframe Local</h1>
-    <iframe src="pagina1.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="Paginas Extras/pagina1.html" frameborder="0" height="500" width="500"></iframe>
 </body>
 </html>
