--- a/Curso HTML/Exercicios/Módulo 4/Exercício 26 -Meida Query/mq003/index.html
+++ b/Curso HTML/Exercicios/Módulo 4/Exercício 26 -Meida Query/mq003/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos/style.css">
+ <title>Media Query</title>
 </head>
 <body>
-    <p>Os dados foram enviados!</p>
-<p>Aprenda PHP para saber o que fazer com eles!</p>
+    <h1>Mude a orientação do seu dispositivo</h1>
 </body>
 </html>
